@@ -20,13 +20,15 @@ import com.google.common.annotations.VisibleForTesting;
 import com.google.common.util.concurrent.ListeningExecutorService;
 import com.palantir.atlasdb.workload.store.ReadOnlyTransactionStore;
 import com.palantir.atlasdb.workload.store.TransactionStore;
+import com.palantir.atlasdb.workload.transaction.witnessed.FullyWitnessedTransaction;
+import com.palantir.atlasdb.workload.transaction.witnessed.OnlyCommittedWitnessedTransactionVisitor;
 import com.palantir.atlasdb.workload.transaction.witnessed.WitnessedTransaction;
 import com.palantir.logsafe.exceptions.SafeRuntimeException;
 import java.util.Comparator;
 import java.util.List;
 import java.util.concurrent.ExecutionException;
 import java.util.concurrent.Future;
-import java.util.stream.Collectors;
+import one.util.streamex.StreamEx;
 
 public final class DefaultWorkflow<T extends TransactionStore> implements Workflow {
     private final ConcurrentTransactionRunner<T> concurrentTransactionRunner;
@@ -45,7 +47,7 @@ public final class DefaultWorkflow<T extends TransactionStore> implements Workfl
         this.readOnlyTransactionStore = readOnlyTransactionStore;
     }
 
-    public static <T extends TransactionStore> Workflow create(
+    public static <T extends TransactionStore> DefaultWorkflow<T> create(
             T store,
             KeyedTransactionTask<T> transactionTask,
             WorkflowConfiguration configuration,
@@ -60,7 +62,7 @@ public final class DefaultWorkflow<T extends TransactionStore> implements Workfl
     @Override
     public WorkflowHistory run() {
         return ImmutableWorkflowHistory.builder()
-                .history(sortByEffectiveTimestamp(runTransactionTask()))
+                .history(sortAndFilterTransactions(runTransactionTask()))
                 .transactionStore(readOnlyTransactionStore)
                 .build();
     }
@@ -79,11 +81,17 @@ public final class DefaultWorkflow<T extends TransactionStore> implements Workfl
         }
     }
 
+    /**
+     * Sorts transactions by their effective timestamp and filters out transactions that are not fully committed.
+     */
     @VisibleForTesting
-    static List<WitnessedTransaction> sortByEffectiveTimestamp(List<WitnessedTransaction> unorderedTransactions) {
-        return unorderedTransactions.stream()
+    List<FullyWitnessedTransaction> sortAndFilterTransactions(List<WitnessedTransaction> unorderedTransactions) {
+        OnlyCommittedWitnessedTransactionVisitor visitor =
+                new OnlyCommittedWitnessedTransactionVisitor(readOnlyTransactionStore);
+        return StreamEx.of(unorderedTransactions)
+                .mapPartial(transaction -> transaction.accept(visitor))
                 .sorted(Comparator.comparingLong(DefaultWorkflow::effectiveTimestamp))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     private static long effectiveTimestamp(WitnessedTransaction witnessedTransaction) {
